Fix TLS in the packaged exe: add jdk.crypto.ec to the runtime image
The jlink'd image was missing elliptic-curve crypto, so HTTPS to GitHub
failed with "Received fatal alert: handshake_failure". The image is now
built with jlink directly (--add-modules jdk.crypto.ec,jdk.crypto.cryptoki);
packaging commands documented in launcher/README.md. Verified the exe
loads the manifest over TLS.

Co-Authored-By: Claude <noreply@anthropic.com>